Loaded weights. Implemended confidence thresholding and NMS

--- a/darknet.ipynb
+++ b/darknet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,8 +700,8 @@
     "        modules = self.blocks[1:]\n",
     "        outputs = {}   #We cache the outputs for the route layer\n",
     "        \n",
-    "        write = 0     #Flag, indicating that we already have encountered the first detection\n",
-    "                      #and can concatinate further detections (on differrent scales) to it\n",
+    "        write = False     #Flag, indicating that we already have encountered the first detection\n",
+    "                          #and can concatinate further detections (on differrent scales) to it\n",
     "        for i, module in enumerate(modules):        \n",
     "            module_type = (module[\"type\"])\n",
     "            \n",
@@ -745,19 +745,105 @@
     "                x = predict_transform(x, inp_dim, anchors, num_classes, CUDA)\n",
     "                if not write:              #if no collector has been intialised. \n",
     "                    detections = x\n",
-    "                    write = 1\n",
+    "                    write = True\n",
     "\n",
     "                else:       \n",
     "                    detections = torch.cat((detections, x), 1)\n",
     "\n",
     "            outputs[i] = x\n",
     "            \n",
-    "        return detections"
+    "        return detections\n",
+    "    \n",
+    "    def load_weights(self, weightfile):\n",
+    "        #Open the weights file\n",
+    "        fp = open(weightfile, \"rb\")\n",
+    "\n",
+    "        #The first 5 values are header information \n",
+    "        # 1. Major version number\n",
+    "        # 2. Minor Version Number\n",
+    "        # 3. Subversion number \n",
+    "        # 4,5. Images seen by the network (during training)\n",
+    "        header = np.fromfile(fp, dtype = np.int32, count = 5)\n",
+    "        self.header = torch.from_numpy(header)\n",
+    "        self.seen = self.header[3]\n",
+    "        \n",
+    "        weights = np.fromfile(fp, dtype = np.float32)\n",
+    "        \n",
+    "        ptr = 0  #position in weights array\n",
+    "        for i in range(len(self.module_list)):\n",
+    "            module_type = self.blocks[i + 1][\"type\"]\n",
+    "\n",
+    "            #If module_type is convolutional load weights\n",
+    "            #Otherwise ignore.\n",
+    "            if module_type == \"convolutional\":\n",
+    "                model = self.module_list[i]\n",
+    "                try:\n",
+    "                    batch_normalize = int(self.blocks[i+1][\"batch_normalize\"])\n",
+    "                except:\n",
+    "                    batch_normalize = 0\n",
+    "\n",
+    "                conv = model[0]\n",
+    "                \n",
+    "                #If there is batch normlization\n",
+    "                if (batch_normalize):\n",
+    "                    bn = model[1]\n",
+    "\n",
+    "                    #Get the number of weights of Batch Norm Layer\n",
+    "                    num_bn_biases = bn.bias.numel()\n",
+    "\n",
+    "                    #Load the weights\n",
+    "                    bn_biases = torch.from_numpy(weights[ptr:ptr + num_bn_biases])\n",
+    "                    ptr += num_bn_biases\n",
+    "\n",
+    "                    bn_weights = torch.from_numpy(weights[ptr: ptr + num_bn_biases])\n",
+    "                    ptr  += num_bn_biases\n",
+    "\n",
+    "                    bn_running_mean = torch.from_numpy(weights[ptr: ptr + num_bn_biases])\n",
+    "                    ptr  += num_bn_biases\n",
+    "\n",
+    "                    bn_running_var = torch.from_numpy(weights[ptr: ptr + num_bn_biases])\n",
+    "                    ptr  += num_bn_biases\n",
+    "\n",
+    "                    #Cast the loaded weights into dims of model weights. \n",
+    "                    bn_biases = bn_biases.view_as(bn.bias.data)\n",
+    "                    bn_weights = bn_weights.view_as(bn.weight.data)\n",
+    "                    bn_running_mean = bn_running_mean.view_as(bn.running_mean)\n",
+    "                    bn_running_var = bn_running_var.view_as(bn.running_var)\n",
+    "\n",
+    "                    #Copy the data to model\n",
+    "                    bn.bias.data.copy_(bn_biases)\n",
+    "                    bn.weight.data.copy_(bn_weights)\n",
+    "                    bn.running_mean.copy_(bn_running_mean)\n",
+    "                    bn.running_var.copy_(bn_running_var)\n",
+    "                    \n",
+    "                else:\n",
+    "                    #Number of biases\n",
+    "                    num_biases = conv.bias.numel()\n",
+    "\n",
+    "                    #Load the weights\n",
+    "                    conv_biases = torch.from_numpy(weights[ptr: ptr + num_biases])\n",
+    "                    ptr = ptr + num_biases\n",
+    "\n",
+    "                    #reshape the loaded weights according to the dims of the model weights\n",
+    "                    conv_biases = conv_biases.view_as(conv.bias.data)\n",
+    "\n",
+    "                    #Finally copy the data\n",
+    "                    conv.bias.data.copy_(conv_biases)\n",
+    "                \n",
+    "                #Load the weights for the Convolutional layers\n",
+    "                num_weights = conv.weight.numel()\n",
+    "\n",
+    "                #Do the same as above for weights\n",
+    "                conv_weights = torch.from_numpy(weights[ptr:ptr+num_weights])\n",
+    "                ptr = ptr + num_weights\n",
+    "\n",
+    "                conv_weights = conv_weights.view_as(conv.weight.data)\n",
+    "                conv.weight.data.copy_(conv_weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -771,17 +857,22 @@
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "invalid argument 2: size '[1 x 255 x 3025]' is invalid for input with 689520 elements at /opt/conda/conda-bld/pytorch_1533672544752/work/aten/src/TH/THStorage.cpp:84",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-cc06c64ec325>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0minp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/andre6o6/aux/anaconda3/envs/nn/lib/python3.5/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    475\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    476\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 477\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    478\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    479\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-6969bc3c8a47>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x, CUDA)\u001b[0m\n\u001b[1;32m     51\u001b[0m                 \u001b[0;31m#Transform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m                 \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m                 \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minp_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manchors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_classes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCUDA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mwrite\u001b[0m\u001b[0;34m:\u001b[0m              \u001b[0;31m#if no collector has been intialised.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m                     \u001b[0mdetections\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/andre6o6/aux/Projects/yolo_v3/util.py\u001b[0m in \u001b[0;36mpredict_transform\u001b[0;34m(prediction, inp_dim, anchors, num_classes, CUDA)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;31m#Reshape prediction to B x (# of bbox attributes in one cell) x (# of grid cells)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprediction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbbox_attrs\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnum_anchors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrid_size\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mgrid_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0;31m#Swap last 2 dimentions. Call .contiguous() so that it will affect not only indexes, but data itself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprediction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontiguous\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: invalid argument 2: size '[1 x 255 x 3025]' is invalid for input with 689520 elements at /opt/conda/conda-bld/pytorch_1533672544752/work/aten/src/TH/THStorage.cpp:84"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[1.2280e+01, 2.7334e+01, 1.1130e+02,  ..., 1.7306e-03,\n",
+      "          1.3874e-03, 9.2985e-04],\n",
+      "         [2.0276e+01, 2.7122e+01, 9.4014e+01,  ..., 5.9500e-04,\n",
+      "          9.2471e-04, 1.3085e-03],\n",
+      "         [3.0367e+01, 2.1949e+01, 3.5793e+02,  ..., 8.3609e-03,\n",
+      "          5.1067e-03, 5.8562e-03],\n",
+      "         ...,\n",
+      "         [5.6722e+02, 5.6405e+02, 3.8228e+00,  ..., 4.0966e-06,\n",
+      "          5.6906e-06, 1.3153e-06],\n",
+      "         [5.6477e+02, 5.6362e+02, 8.4218e+00,  ..., 3.8752e-05,\n",
+      "          5.0833e-05, 2.4753e-05],\n",
+      "         [5.6426e+02, 5.6735e+02, 4.5173e+01,  ..., 1.5562e-05,\n",
+      "          1.8984e-05, 3.0372e-05]]], device='cuda:0')\n"
      ]
     }
    ],
@@ -797,6 +888,7 @@
     "    return img_\n",
     "\n",
     "model = Darknet(\"cfg/yolov3.cfg\")\n",
+    "model.load_weights(\"weights/yolov3.weights\")\n",
     "inp = get_test_input()\n",
     "if torch.cuda.is_available():\n",
     "    model.cuda()\n",
