--- a/detector_example.ipynb
+++ b/detector_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -92,9 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/media/andre6o6/aux/Projects/yolo_v3/imgs/black.png']\n"
+     ]
+    }
+   ],
    "source": [
     "# Detection phase\n",
     "read_dir_time = time.time()    #checkpoint used to measure time\n",
@@ -106,17 +114,17 @@
     "    imlist.append(osp.join(osp.realpath('.'), images))\n",
     "except FileNotFoundError:\n",
     "    print (\"No file or directory with the name {}\".format(images))\n",
-    "    exit()\n",
     "    \n",
     "if not os.path.exists(det):\n",
     "    os.makedirs(det)\n",
     "    \n",
-    "read_dir_time = time.time() - read_dir_time"
+    "read_dir_time = time.time() - read_dir_time\n",
+    "print(imlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,31 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dog-cycle-car.png    predicted in  0.082 seconds\n",
-      "Objects Detected:    bicycle truck dog\n",
-      "----------------------------------------------------------\n"
+      "No detections were made\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/media/andre6o6/aux/anaconda3/envs/nn/lib/python3.5/site-packages/torch/nn/modules/upsampling.py:122: UserWarning: nn.Upsampling is deprecated. Use nn.functional.interpolate instead.\n",
-      "  warnings.warn(\"nn.Upsampling is deprecated. Use nn.functional.interpolate instead.\")\n",
-      "/media/andre6o6/aux/anaconda3/envs/nn/lib/python3.5/site-packages/torch/nn/functional.py:1961: UserWarning: Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "/media/andre6o6/aux/anaconda3/envs/nn/lib/python3.5/site-packages/torch/nn/functional.py:1749: UserWarning: Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
       "  \"See the documentation of nn.Upsample for details.\".format(mode))\n"
      ]
     }
    ],
    "source": [
-    "write = False\n",
+    "output = None\n",
     "det_loop_time = time.time()\n",
     "#Loop through batches\n",
     "for i, batch in enumerate(im_batches):\n",
@@ -188,21 +192,13 @@
     "\n",
     "    end = time.time()\n",
     "\n",
-    "    if type(prediction) == int:    #FIXME output == int(0)\n",
-    "        #Objects ont detected\n",
-    "        for im_num, image in enumerate(imlist[i*batch_size: min((i +  1)*batch_size, len(imlist))]):\n",
-    "            im_id = i*batch_size + im_num\n",
-    "            print(\"{0:20s} predicted in {1:6.3f} seconds\".format(image.split(\"/\")[-1], (end - start)/batch_size))\n",
-    "            print(\"{0:20s} {1:s}\".format(\"Objects Detected:\", \"\"))\n",
-    "            print(\"----------------------------------------------------------\")\n",
-    "        #Skip to next loop iteration\n",
+    "    if prediction is None:    #Objects not detected\n",
     "        continue\n",
     "\n",
     "    prediction[:,0] += i*batch_size    #transform the atribute from index in batch to index in imlist \n",
     "\n",
-    "    if not write:                      #If we have't initialised output\n",
-    "        output = prediction  \n",
-    "        write = True\n",
+    "    if output is None:                      #If we have't initialised output\n",
+    "        output = prediction \n",
     "    else:\n",
     "        output = torch.cat((output,prediction))\n",
     "\n",
@@ -219,17 +215,13 @@
     "        \n",
     "det_loop_time = time.time() - det_loop_time\n",
     "\n",
-    "#FIXME hacks again (output = None)\n",
-    "try:\n",
-    "    output\n",
-    "except NameError:\n",
-    "    print (\"No detections were made\")\n",
-    "    #exit()"
+    "if output is None:\n",
+    "    print (\"No detections were made\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -315,11 +307,11 @@
       "Task                     : Time Taken (in seconds)\n",
       "\n",
       "Reading addresses        : 0.001\n",
-      "Loading batch            : 0.020\n",
-      "Detection (1 images)     : 0.084\n",
-      "Output Processing        : 0.008\n",
-      "Drawing Boxes            : 0.023\n",
-      "Average time_per_img     : 0.199\n",
+      "Loading batch            : 0.140\n",
+      "Detection (1 images)     : 1.163\n",
+      "Output Processing        : 0.002\n",
+      "Drawing Boxes            : 0.410\n",
+      "Average time_per_img     : 140.123\n",
       "----------------------------------------------------------\n"
      ]
     }
